Fix date time overflow

--- a/static/style.css
+++ b/static/style.css
@@ -22,6 +22,13 @@
   box-sizing: border-box;
 }
 
+input[type="date"],
+input[type="time"] {
+  width: 100% !important;
+  max-width: 100% !important;
+  min-width: 0 !important;
+}
+
 html {
   font-size: 16px;
   -webkit-text-size-adjust: 100%;
@@ -557,14 +564,6 @@ a.header-contact:hover {
 .field__input:focus {
   outline: 2px solid var(--green);
   outline-offset: 1px;
-}
-
-.field__input[type="date"],
-.field__input[type="time"] {
-  width: 100%;
-  box-sizing: border-box;
-  max-width: 100%;
-  min-width: 0;
 }
 
 .field__input--sm {
